# sqs-lambda

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: merging_example.rs
src/: cache.rs  completion_event_serializer.rs  completion_handler.rs  consumer.rs  error.rs  event_decoder.rs  event_emitter.rs  event_handler.rs  event_processor.rs  event_retriever.rs  fs_completion_handler.rs  fs_event_emitter.rs  fs_event_retriever.rs  fs_notify_consumer.rs  lib.rs  local_service.rs  local_sqs_service.rs  local_sqs_service_options.rs  redis_cache.rs  retry.rs  s3_event_emitter.rs  service_builder.rs  sqs_completion_handler.rs  sqs_consumer.rs  sqs_service.rs
