[package]
name = "sqs-lambda"
version = "0.6.0"
authors = ["Insanitybit <insanitybit@gmail.com>"]
edition = "2018"

description = "An experimental library to cut down on boilerplate when writing SQS triggered Lambdas"
license = "MIT OR Apache-2.0"
keywords = ["sqs", "aws", "lambda"]


[dependencies]
failure = "0.1.3"

serde_derive = "1.0.82"
log = "0.4.6"
simple_logger = "1.0.1"

aws_lambda_events = "0.2.0"

rusoto_core = {version = "0.40.0", default_features = false, features=["rustls"]}
rusoto_s3 = {version = "0.40.0", default_features = false, features=["rustls"]}
rusoto_sqs = {version = "0.40.0", default_features = false, features=["rustls"]}

serde_json = "1.0.33"
serde = "1.0.82"
zstd = "0.4.21"
stopwatch = "0.0.7"
prost = "0.4.0"
lambda_runtime = "0.1.0"
tokio = "0.1.18"
futures = "0.1.26"
