[package]
name = "sqs-lambda"
version = "0.7.0"
authors = ["Insanitybit <insanitybit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.42.0"
rusoto_sqs = "0.42.0"


tokio = {version="0.2.4", features=["sync", "rt-core", "macros", "time"]}
futures = {version="0.3", features=["compat"]}
rusoto_s3 = "0.42.0"
async-trait = "0.1.21"
aws_lambda_events = "0.2.5"
serde = "1.0.104"
serde_json = "1.0.44"
prost = "0.5.0"
zstd = "0.5.1"
lambda_runtime = "0.2.1"

uuid = { version = "0.8.1", features = ["v4"] }