[package]
name = "sqs-lambda"
version = "0.20.1"
authors = ["Insanitybit <insanitybit@gmail.com>"]
edition = "2018"
description = 'SQS Service helper library'
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rusoto_core = {version = "0.42.0", default_features = false, features=["rustls"]}
rusoto_s3 = {version = "0.42.0", default_features = false, features=["rustls"]}
rusoto_sqs = {version = "0.42.0", default_features = false, features=["rustls"]}

futures = {version="0.3", features=["compat"]}

tokio = { version = "0.2.4", features = ["sync", "rt-core", "macros", "time", "rt-threaded"] }
async-trait = "0.1.21"
aws_lambda_events = "0.2.5"
serde = "1.0.104"
serde_json = "1.0.44"
prost = "0.5.0"
zstd = "0.5.1"
lambda_runtime = "0.2.1"

uuid = { version = "0.8.1", features = ["v4"] }
log = "0.4.8"
futures-retry = "0.3.3"
rand = "0.7.2"
rand_xorshift = "0.2.0"
hex = "0.4.0"
darkredis = "0.5.2"
num_cpus = "1.11.1"
